...
    <string name="fb_login_protocol_scheme" translatable="false">fb426154887744117</string>
    <string name="facebook_application_id" translatable="false">426154887744117</string>

    <string name="FACEBOOK_APP_ID">426154887744117</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">ba84978194b56407b1a917fc66acd053</string>

    <string name="action_search">Cari</string>
    <string name="btn_forgot_password">Lupa password?</string>
    <string name="btn_add_to_cart">Tambah ke Troli</string>
    <string name="btn_negative_cancel">Batal</string>
    <string name="btn_negative_no">Tidak</string>
    <string name="btn_positive_ok">OK</string>
    <string name="action_signout">Logout</string>
    <string name="action_save_profile_edits">Simpan</string>
    <string name="btn_positive_yes">Ya</string>
...
    <string name="no_items">Tidak ada data</string>
    <string name="paket">Booking</string>
    <string name="password">Password</string>
    <string name="please_insert_password">Silahkan masukkan password</string>
    <string name="please_insert_your_email">Silahkan masukkan email</string>
    <string name="register">Gabung Sekarang</string>
    <string name="sign_in">Login</string>
    <string name="title_activity_address_book">Buku Alamat</string>
    <string name="title_address_book">Buku Alamat</string>
    <string name="title_shipping_options">Pengiriman</string>


    <string name="lbl_transfer_to">Transfer ke</string>
...
    <string name="action_launch_edit_product">Edit Produk</string>
    <string name="btn_edit_product">Edit Produk</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_product_detail">Product Detail</string>

    <string name="btn_buy_now">Beli Sekarang</string>
    <string name="title_activity_shopping_cart">Troli</string>
    <string name="btn_continue_checkout">Lanjut ke Pembayaran</string>
    <string name="title_activity_order">Orderan</string>
    <string name="btn_pay_now">Bayar Sekarang</string>
    <string name="btn_order_received">Barang Diterima</string>
    <string name="btn_order_reture">Reture Barang </string>
    <string name="lbl_shipping_destination">Tujuan Pengiriman</string>
...
    <string name="hint_cart_add_note">Tambah catatan&#8230;</string>
    <string name="lbl_selected_product_extra_note">Catatan untuk penjual</string>
    <string name="lbl_register_title">Gratis, gabung dengan Poken sekarang juga.</string>
    <string name="lbl_login_title">Masuk ke Poken</string>
    <string name="lbl_login_helper_have_account_already">Sudah pernah gabung?</string>
    <string name="lbl_login_helper_not_have_account">Belum punya akun?</string>
    <string name="btn_login_open_login_page">Mulai Login</string>
    <string name="btn_login_open_register_page">Mulai Bergabung</string>
    <string name="btn_continue_shopping">Lanjut Belanja</string>
    <string name="lbl_product_stock">Stok: %d</string>
    <string name="lbl_product_detail_sold_out">Stok Habis</string>
    <string name="hint_addressbook_receiver_name">Atas Nama Peneriman</string>
    <string name="hint_addressbook_phone">Nomor telepon</string>
    <string name="hint_addressbook_address">Alamat detail</string>
    <string name="btn_addressbook_submit">Tambah Alamat Penerima</string>
...
