...
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTvTitle"
            android:layout_marginTop="@dimen/icon_24dp"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
...
            android:layout_below="@id/textInputLayoutEmail"
            android:layout_marginBottom="@dimen/item_gap_m"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
...
                android:textSize="20sp"
                tools:text="anwar_poken17" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTilPassword"
            android:text="@string/sign_in"
            android:theme="@style/MyButton" />

...
