...
      tools:context="id.unware.poken.ui.home.view.HomeActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Cari barang"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_shopping_cart"
        android:orderInCategory="100"
        android:title="Troli"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        app:showAsAction="always" />

    <item
...
